# idtrack

./: .buildinfo  .cookietemple.yml  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  CODE_OF_CONDUCT.rst  Dockerfile  LICENSE  README.rst  authors.html  code_of_conduct.html  codecov.yml  contributing.html  cookietemple.cfg  genindex.html  index.html  initialization-Copy1 copy.ipynb  initialization-Copy1.ipynb  installation.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  readme.html  reference.html  search.html  searchindex.js  usage.html
.github/workflows/: build_package.yml  labeler.yml  publish_docs.yml  publish_package.yml  run_tests.yml  sync_project.yml
_modules/: index.html
_modules/idtrack/: _api.html  _database_manager.html  _db.html  _external_databases.html  _graph_maker.html  _harmonize_features.html  _the_graph.html  _track.html  _track_tests.html  _verify_organism.html
_notebooks/: Untitled.html  comparison.html  example_manual_running.html  initialization.html  initialization.ipynb  initialization_graph.html  initialization_graph.ipynb  initialization_test.html  prepare_new_external_yaml.html  prepare_new_external_yaml.ipynb  random_data.html  results_preliminary_for_hlca.html  results_preliminary_for_hlca.ipynb  tutorial_harmonization.html
_sources/: usage.rst.txt
_sources/_notebooks/: initialization.ipynb.txt  random_data.ipynb.txt
ddocs/: reference.rst
ddocs/_notebooks/: Untitled.ipynb  initialization_test.ipynb
docs/: Makefile  badges.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  readme.rst  reference.rst  requirements.txt  short_intro.rst  usage.rst
docs/_logo/: logo.key  logo.pxd
docs/_notebooks/: Untitled-Copy1.ipynb  Untitled.ipynb  Untitled1.ipynb  comparison.ipynb  initialization-Copy1.ipynb  initialization.ipynb  initialization_test.ipynb  prepare_new_external_yaml.ipynb  random_data.ipynb  results_preliminary_for_hlca-Copy1.ipynb  (+2 more)
environments/: README.md  idt_env.yaml  idt_env_minimal.yaml  poetry_env_3_10.yaml  poetry_env_3_8.yaml  poetry_env_3_9.yaml
ggg/: run_tests.yml
idtrack/: __init__.py  __main__.py  _api.py  _database_manager.py  _dataset.py  _db.py  _external_databases.py  _functions.py  _graph.py  _graph_history.py  _graph_maker.py  _harmonize_features.py  _hdf5_store.py  _the_graph.py  _track.py  _track_tests.py  _utils_hdf5.py  _verbose.py  _verify_organism.py
makefiles/: Linux.mk  Windows.mk
reproducibility/: README.md  idt_env.yaml  idt_env_with_r.yaml
temp/: homo_sapiens_externals_modified.yml
tests/: __init__.py  test_initialization.py  test_main.py
(+36 files in other folders)
