[tool.poetry]
name = "idtrack"
version = "0.0.1"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "Biological ID matching between different times and/or databases."
authors = ["Kemal Inecik <k.inecik@gmail.com>"]
license = "BSD"
readme = "README.rst"
homepage = "https://github.com/theislab/idtrack"
repository = "https://github.com/theislab/idtrack"
documentation = "https://idtrack.readthedocs.io"
packages = [
    { include = "idtrack" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = ">=8.0.0"
rich = ">=10.3.0"
PyYAML = ">=5.4.1"
h5py = "^3.7.0"
tables = "^3.7.0"
pandas = "^1.4.3"
numpy = "^1.23.1"
networkx = "^2.8.5"
requests = "^2.28.1"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.3"
coverage = {extras = ["toml"], version = ">=5.3"}
safety = ">=1.9.0"
typeguard = ">=2.12.0"
xdoctest = {extras = ["colors"], version = ">=0.15.0"}
sphinx = ">=4.0.2"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.11.1"
flake8 = ">=3.8.4"
black = ">=20.8b1"
flake8-bandit = "2.0.0"
flake8-bugbear = ">=21.4.3"
flake8-docstrings = ">=1.5.0"
flake8-rst-docstrings = ">=0.2.3"
pep8-naming = ">=0.11.1"
darglint = ">=1.5.8"
pre-commit-hooks = ">=4.0.1"
sphinx-rtd-theme = ">=0.5.0"
sphinx-click = ">=3.0.0"
Pygments = ">=2.8.1"
types-pkg-resources = ">=0.1.2"
types-requests = ">=2.25.2"
types-attrs = ">=19.1.0"
sphinx-rtd-dark-mode = ">=1.2.3"
Jinja2 = ">=3.0.1"
mypy = ">=0.910"
pyupgrade = ">=2.31.0"
bandit = "^1.7.4"
types-PyMySQL = "^1.0.19"
flake8-builtins = "^1.5.3"
flake8-colors = "^0.1.9"

[tool.poetry.scripts]
idtrack = "idtrack.__main__:main"

[tool.black]
line-length = 120

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.isort]
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120
profile = "black"

[tool.coverage.paths]
source = ["idtrack", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["idtrack"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
